Fix Firefox horizontal scroll + card spacing issues
Changed overflow settings for coming up part of RadioPlayer.
Changed widths of cards on homepage when on desktop since Firefox rendered it slightly differently.

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -87,7 +87,7 @@
   position: relative;
 
   @media only screen and (min-width: 1000px) {
-    width: 43vw;
+    width: 42vw;
   }
 }
 
