--- a/src/app/ui/RadioPlayer.module.css
+++ b/src/app/ui/RadioPlayer.module.css
@@ -41,7 +41,7 @@
   gap: 0;
   align-self: stretch;
   background: #32103F;
-  overflow: clip;
+  overflow: hidden;
   /*flex-grow: 1;*/
   width: 100%;
 }
@@ -104,6 +104,7 @@
 .Details {
   display: flex;
   padding: 16px 0 16px 0;
+  overflow-x: clip;
   flex-direction: column;
   align-items: flex-start;
   gap: 8px;
@@ -233,6 +234,7 @@
   padding-bottom: 16px;
   padding-top: 8px;
 }
+
 .EmptyScheduleMessage p {
   color: rgb(255, 255, 255, 0.7);
   font-weight: 500;
